deploy/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: routeguide-server
  labels:
    app: routeguide-server
  annotations:
    projectcontour.io/upstream-protocol.h2c: "10000"
spec:
  selector:
    app: routeguide-server
  ports:
    - port: 10000
      targetPort: 10000
  type: ClusterIP
