deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: routeguide-server
  labels:
    name: routeguide-server
spec:
  rules:
    - host: grpc.zyg.cloud
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: routeguide-server
                port:
                  number: 10000
  tls:
    # This secret must exist beforehand
    # The cert must also contain the subj-name fortune-teller.stack.build
    # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
    # NOTE to change domain name into your favor
    - secretName: grpc-tls
      hosts:
        - "grpc.zyg.cloud"
